Disable MediaFoundation HW encoder on Windows

Disable this feature due to reports where users get error:
[mr.mirror.cast.Session] [WARNING] Video stream error Video codec initialization failed.
https://cs.chromium.org/chromium/src/chrome/renderer/media/cast_session_delegate.cc?rcl=0&l=298

BUG=636064

Review-Url: https://codereview.chromium.org/2335743002
Cr-Commit-Position: refs/heads/master@{#418066}

Former-commit-id: 48e00814143cfe9f019679ca1cf55693e15aca83